Added test for kpm_ind_msg (format 1)

--- a/test/encode_decode/CMakeLists.txt
+++ b/test/encode_decode/CMakeLists.txt
@@ -33,6 +33,9 @@ if(E2AP_ENCODING STREQUAL "ASN")
   add_executable(test_kpm_enc_dec_ind_hdr_asn test_kpm_enc_dec_ind_hdr_asn.c)
   target_link_libraries(test_kpm_enc_dec_ind_hdr_asn kpm_sm)
 
+  add_executable(test_kpm_enc_dec_ind_msg_asn test_kpm_enc_dec_ind_msg_asn.c)
+  target_link_libraries(test_kpm_enc_dec_ind_msg_asn kpm_sm)
+
 ###########################
 # E2AP Flatbuffers Encoding
 ###########################
