--- a/src/sm/kpm_sm_v2.02/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.15) # setting this is required
 project(kpm_sm)            # this sets the project name
 
+
+# KPM Service Model
+#set(SM_ENCODING_KPM "ASN" CACHE STRING "The KPM SM encoding to use")
+#set_property(CACHE SM_ENCODING_KPM PROPERTY STRINGS "ASN")
+#message(STATUS "Selected KPM SM_ENCODING: ${SM_ENCODING_KPM}")
+
+
 set(SM_ENCODING_KPM_SRC
                       ../sm_proc_data.c 
                       kpm_sm_ric.c 
@@ -12,7 +19,7 @@ set(SM_ENCODING_KPM_SRC
                       ../../util/alg_ds/ds/seq_container/seq_ring.c 
                       ../../util/alg_ds/ds/assoc_container/assoc_rb_tree.c
                       ../../util/alg_ds/ds/assoc_container/bimap.c
-                      ie/kpm_data_ie.c
+                      #ie/kpm_data_ie.c
                       )
 
 if(SM_ENCODING_KPM STREQUAL "PLAIN")
@@ -32,8 +39,8 @@ elseif(SM_ENCODING_KPM STREQUAL "ASN")
                       )
   target_link_libraries(kpm_sm PUBLIC -lm)
   target_include_directories(kpm_sm PRIVATE "ie/asn")
-  target_compile_options(kpm_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT")
-  target_compile_options(kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
+  target_compile_options(kpm_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT" -fPIC)
+  target_compile_options(kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
 
 elseif(SM_ENCODING_KPM STREQUAL "FLATBUFFERS" )
   message(FATAL_ERROR "KPM SM FB not implemented")
