--- a/src/sm/kpm_sm_v2.02/ie/asn/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/asn/CMakeLists.txt
@@ -365,5 +365,5 @@ target_include_directories(e2sm_kpm_asn1_obj
                            )
 
 target_compile_options(e2sm_kpm_asn1_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
-target_compile_options(e2sm_kpm_asn1_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
+target_compile_options(e2sm_kpm_asn1_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
 
