--- a/examples/xApp/c/tc/CMakeLists.txt
+++ b/examples/xApp/c/tc/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(xapp_tc_all
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_tc_all
@@ -29,7 +29,7 @@ add_executable(xapp_tc_codel
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_tc_codel
@@ -49,7 +49,7 @@ add_executable(xapp_tc_partition
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_tc_partition
@@ -70,7 +70,7 @@ add_executable(xapp_tc_ecn
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_tc_ecn
@@ -91,7 +91,7 @@ add_executable(xapp_tc_osi_codel
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_tc_osi_codel
