--- a/examples/xApp/c/monitor/CMakeLists.txt
+++ b/examples/xApp/c/monitor/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(xapp_mac_rlc_pdcp_moni
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #   ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
 
 target_link_libraries(xapp_mac_rlc_pdcp_moni
@@ -29,7 +29,7 @@ add_executable(xapp_gtp_moni
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                #../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 )
                 
 add_executable(xapp_kpm_moni 
@@ -40,7 +40,7 @@ add_executable(xapp_kpm_moni
                 ../../../../src/sm/pdcp_sm/ie/pdcp_data_ie.c
                 ../../../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../../../src/sm/tc_sm/ie/tc_data_ie.c
-                #../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
                 ../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
                 )
 
