--- a/examples/xApp/c/helloworld/CMakeLists.txt
+++ b/examples/xApp/c/helloworld/CMakeLists.txt
@@ -9,7 +9,14 @@ add_executable(xapp_hw
 				../../../../src/sm/slice_sm/ie/slice_data_ie.c
 				../../../../src/sm/tc_sm/ie/tc_data_ie.c
 				../../../../src/sm/gtp_sm/ie/gtp_data_ie.c
-                ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_hdr_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+
 				)
 
 target_link_libraries(xapp_hw
