--- a/test/agent-ric-xapp/CMakeLists.txt
+++ b/test/agent-ric-xapp/CMakeLists.txt
@@ -2,11 +2,21 @@ if(E2AP_ENCODING STREQUAL "ASN")
 add_executable(test_ag_ric_xapp 
                 test_ag_ric_xapp.c
                 ../sm/common/fill_ind_data.c
+                ../sm/kpm_sm/fill_kpm_ind_data/fill_kpm_ind_data.c
+                ../sm/kpm_sm/fill_kpm_ind_data/fill_ind_hdr_frm_1.c
+                ../sm/kpm_sm/fill_kpm_ind_data/fill_ind_msg_frm_1.c
+
                 ../../src/sm/mac_sm/ie/mac_data_ie.c
                 ../../src/sm/rlc_sm/ie/rlc_data_ie.c
                 ../../src/sm/pdcp_sm/ie/pdcp_data_ie.c
                 ../../src/sm/slice_sm/ie/slice_data_ie.c
                 ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
+
+                ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_hdr_frm_1.c
+                ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
+                ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+                ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+
                 ../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../src/sm/gtp_sm/ie/gtp_data_ie.c
                 ../../src/util/alg_ds/alg/defer.c
