KPM v02.03 RIC Style 1 test encoding/decoding passed

--- a/examples/xApp/c/monitor/CMakeLists.txt
+++ b/examples/xApp/c/monitor/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(xapp_mac_rlc_pdcp_moni
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
 
@@ -46,6 +47,7 @@ add_executable(xapp_gtp_moni
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
 
