--- a/examples/xApp/c/slice/CMakeLists.txt
+++ b/examples/xApp/c/slice/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(xapp_slice_moni_ctrl
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
                 )
 
