--- a/examples/xApp/c/tc/CMakeLists.txt
+++ b/examples/xApp/c/tc/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(xapp_tc_all
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
                 )
@@ -44,6 +45,7 @@ add_executable(xapp_tc_codel
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
                 )
@@ -72,6 +74,7 @@ add_executable(xapp_tc_partition
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
                 )
@@ -101,6 +104,7 @@ add_executable(xapp_tc_ecn
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
                 )
@@ -131,6 +135,7 @@ add_executable(xapp_tc_osi_codel
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
 
 
