--- a/test/agent-ric-xapp/CMakeLists.txt
+++ b/test/agent-ric-xapp/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(test_ag_ric_xapp
                 ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
                 ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
                 ../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
+                ../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
 
                 ../../src/sm/tc_sm/ie/tc_data_ie.c
                 ../../src/sm/gtp_sm/ie/gtp_data_ie.c
