Working in progress for test of format 2

--- a/examples/xApp/c/helloworld/CMakeLists.txt
+++ b/examples/xApp/c/helloworld/CMakeLists.txt
@@ -12,11 +12,11 @@ add_executable(xapp_hw
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_hdr_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
-        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
-        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+		../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
 		../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+		../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 				)
 
