--- a/examples/xApp/c/tc/CMakeLists.txt
+++ b/examples/xApp/c/tc/CMakeLists.txt
@@ -14,8 +14,10 @@ add_executable(xapp_tc_all
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+        ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 
                 )
@@ -44,8 +46,10 @@ add_executable(xapp_tc_codel
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+        ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 
                 )
@@ -73,8 +77,10 @@ add_executable(xapp_tc_partition
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+        ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 
                 )
@@ -103,8 +109,10 @@ add_executable(xapp_tc_ecn
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+        ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 
                 )
@@ -134,8 +142,10 @@ add_executable(xapp_tc_osi_codel
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
+        ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_2.c
         ../../../../src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/label_info_lst.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/plmn_identity.c
+        ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
 
 
 
