--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_subdirectory(ap)
 add_subdirectory(ep)
 add_subdirectory(msg_hand)
+add_subdirectory(e2sm_common_ie)
 
 add_library(pending_events_obj OBJECT 
                                 pending_events.c 
