--- a/src/lib/e2sm_common_ie/enc_asn_sm_common/CMakeLists.txt
+++ b/src/lib/e2sm_common_ie/enc_asn_sm_common/CMakeLists.txt
@@ -2,8 +2,13 @@ set(SM_COMMON_ENC_ASN_SRCS
     enc_cell_global_id.c
     enc_ue_id.c)
 
-add_library(sm_common_enc_asn_obj OBJECT ${SM_COMMON_ENC_ASN_SRCS})
+add_library(sm_common_enc_asn_obj OBJECT 
+                                $<TARGET_OBJECTS:e2sm_kpm_asn1_obj>                                
+                                ${SM_COMMON_ENC_ASN_SRCS}
+                                )
 
+target_link_libraries(sm_common_enc_asn_obj PRIVATE
+                                e2sm_kpm_asn1_obj)
 
 target_include_directories(sm_common_enc_asn_obj PUBLIC
                                          "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
