Partially done the build system

--- a/src/sm/kpm_sm_v2.02/ie/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/CMakeLists.txt
@@ -1,1 +1,10 @@
 add_subdirectory(kpm_data_ie)
+
+add_library(kpm_ie_obj OBJECT
+    kpm_data_ie.c
+    $<TARGET_OBJECTS:kpm_data_ie_obj>
+  )
+
+target_link_libraries(kpm_ie_obj PUBLIC
+                                e2sm_kpm_asn1_obj)
+ 
