--- a/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
@@ -1,4 +1,15 @@
-file(GLOB KPM_RIC_INFO_SRCS *.c)
+set(KPM_RIC_INFO_SRCS 
+  kpm_ran_function_def.c
+  kpm_ric_action_def.c
+  kpm_ric_action_def_frm_1.c
+  kpm_ric_action_def_frm_2.c
+  kpm_ric_event_trigger_def.c
+  kpm_ric_ind_hdr.c
+  kpm_ric_ind_hdr_frm_1.c
+  kpm_ric_ind_msg.c
+  kpm_ric_ind_msg_frm_1.c
+  )
+
 
 add_library(kpm_ric_info_obj OBJECT
                             ${KPM_RIC_INFO_SRCS}
@@ -6,10 +17,4 @@ add_library(kpm_ric_info_obj OBJECT
 
 target_link_libraries(kpm_ric_info_obj PUBLIC
                                     e2sm_common_ie_obj)
-
-target_include_directories(kpm_ric_info_obj PUBLIC
-                                         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-                                         )
               
-target_compile_options(kpm_ric_info_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
-target_compile_options(kpm_ric_info_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
