--- a/src/lib/e2sm_common_ie/3gpp_derived_ie_dec_asn/CMakeLists.txt
+++ b/src/lib/e2sm_common_ie/3gpp_derived_ie_dec_asn/CMakeLists.txt
@@ -15,12 +15,9 @@ add_library(3gpp_derived_ie_dec_asn_obj OBJECT
                                     ${3GPP_DERIVED_IE_DEC_ASN_SRCS}
                                     $<TARGET_OBJECTS:e2sm_kpm_asn1_obj>)
 
-target_link_libraries(3gpp_derived_ie_dec_asn_obj PRIVATE
+target_link_libraries(3gpp_derived_ie_dec_asn_obj PUBLIC
                                     e2sm_kpm_asn1_obj)
     
-target_include_directories(3gpp_derived_ie_dec_asn_obj PUBLIC
-                                         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-                                         )
               
 target_compile_options(3gpp_derived_ie_dec_asn_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
 target_compile_options(3gpp_derived_ie_dec_asn_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
