--- a/src/sm/kpm_sm_v2.02/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/CMakeLists.txt
@@ -22,15 +22,8 @@ set(SM_ENCODING_KPM_SRC
                       ../../util/alg_ds/ds/seq_container/seq_ring.c 
                       ../../util/alg_ds/ds/assoc_container/assoc_rb_tree.c
                       ../../util/alg_ds/ds/assoc_container/bimap.c
-                      ie/kpm_data_ie.c
 
-                      $<TARGET_OBJECTS:kpm_data_ie_obj>
-                      # ie/kpm_data_ie/data/label_info_lst.c
-                      # ie/kpm_data_ie/kpm_ric_info/kpm_ran_function_def.c
-                      # ie/kpm_data_ie/kpm_ric_info/kpm_ric_action_def_frm_1.c
-                      # ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_hdr_frm_1.c
-                      # ie/kpm_data_ie/kpm_ric_info/kpm_ric_ind_msg_frm_1.c
-
+                      $<TARGET_OBJECTS:kpm_ie_obj>
                       )
 
 if(SM_ENCODING_KPM STREQUAL "PLAIN")
@@ -55,6 +48,37 @@ elseif(SM_ENCODING_KPM STREQUAL "ASN")
   target_compile_options(kpm_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT" -fPIC)
   target_compile_options(kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
 
+
+  #Nasty solution. Do it properly, Mikel!
+
+  add_library(kpm_sm_static STATIC  #STATIC or SHARED
+                      $<TARGET_OBJECTS:kpm_e2sm_specific_ie_dec_asn_obj>
+                      $<TARGET_OBJECTS:kpm_e2sm_specific_ie_enc_asn_obj>
+                      $<TARGET_OBJECTS:kpm_ric_info_obj> 
+                      $<TARGET_OBJECTS:kpm_enc_common_asn_obj>
+                      $<TARGET_OBJECTS:kpm_enc_ie_asn_obj>
+                      $<TARGET_OBJECTS:kpm_dec_common_asn_obj>
+                      $<TARGET_OBJECTS:kpm_dec_ie_asn_obj>
+                      $<TARGET_OBJECTS:kpm_ric_info_common_obj>
+                      $<TARGET_OBJECTS:e2sm_common_ie_obj>
+                      $<TARGET_OBJECTS:sm_common_ie_obj>
+                      $<TARGET_OBJECTS:sm_common_dec_asn_obj>
+                      $<TARGET_OBJECTS:sm_common_enc_asn_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_dec_asn_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_enc_asn_obj>
+
+                      ${SM_ENCODING_KPM_SRC}
+                      enc/kpm_enc_asn.c 
+                      dec/kpm_dec_asn.c 
+            )
+
+  target_include_directories(kpm_sm_static PRIVATE "ie/asn")
+  target_compile_options(kpm_sm_static PRIVATE "-DASN_DISABLE_OER_SUPPORT")
+
+
+
+
 elseif(SM_ENCODING_KPM STREQUAL "FLATBUFFERS" )
   message(FATAL_ERROR "KPM SM FB not implemented")
 else()
@@ -62,3 +86,5 @@ else()
 endif()
 
 target_compile_definitions(kpm_sm PUBLIC ${SM_ENCODING_KPM})
+target_compile_definitions(kpm_sm_static PUBLIC ${SM_ENCODING_KPM})
+
