--- a/src/sm/kpm_sm_v2.02/dec/dec_asn/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/dec/dec_asn/CMakeLists.txt
@@ -1,4 +1,15 @@
-file(GLOB KPM_DEC_IE_ASN_SRCS *.c)
+set(KPM_DEC_IE_ASN_SRCS 
+  dec_ric_action_def_frm_1.c
+  dec_ric_action_def_frm_2.c
+  dec_ric_action_def_frm_3.c
+  dec_ric_action_def_frm_4.c
+  dec_ric_action_def_frm_5.c
+  dec_ric_event_trigger_frm_1.c
+  dec_ric_ind_hdr_frm_1.c
+  dec_ric_ind_msg_frm_1.c
+  dec_ric_ind_msg_frm_2.c
+  dec_ric_ind_msg_frm_3.c
+  )
 
 add_library(kpm_dec_ie_asn_obj OBJECT
                             ${KPM_DEC_IE_ASN_SRCS}
@@ -6,10 +17,6 @@ add_library(kpm_dec_ie_asn_obj OBJECT
 
 target_link_libraries(kpm_dec_ie_asn_obj PRIVATE
                             e2sm_kpm_asn1_obj)
-
-target_include_directories(kpm_dec_ie_asn_obj PUBLIC
-                                         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-                                         )
               
 target_compile_options(kpm_dec_ie_asn_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
 target_compile_options(kpm_dec_ie_asn_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
