--- a/src/sm/kpm_sm_v2.02/dec/dec_asn_kpm_common/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/dec/dec_asn_kpm_common/CMakeLists.txt
@@ -1,4 +1,14 @@
-file(GLOB KPM_DEC_COMMON_ASN_SRCS *.c)
+set(KPM_DEC_COMMON_ASN_SRCS 
+  dec_label_info.c
+  dec_matching_cond_frm_3.c
+  dec_matching_cond_frm_4.c
+  dec_meas_data.c
+  dec_meas_info_cond_ue.c
+  dec_meas_info_frm_1.c
+  dec_meas_info_frm_3.c
+  dec_test_info.c
+  )
+
 
 add_library(kpm_dec_common_asn_obj OBJECT
                                 ${KPM_DEC_COMMON_ASN_SRCS}
@@ -6,10 +16,6 @@ add_library(kpm_dec_common_asn_obj OBJECT
 
 target_link_libraries(kpm_dec_common_asn_obj PRIVATE
                                 e2sm_kpm_asn1_obj)
-
-target_include_directories(kpm_dec_common_asn_obj PUBLIC
-                                         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-                                         )
               
 target_compile_options(kpm_dec_common_asn_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
 target_compile_options(kpm_dec_common_asn_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
