--- a/src/lib/e2sm_common_ie/sm_common_ie/CMakeLists.txt
+++ b/src/lib/e2sm_common_ie/sm_common_ie/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SM_COMMON_IE_SRCS
-    ue_id.c)
+    ue_id.c
+    cell_global_id.c)
 
 add_library(sm_common_ie_obj OBJECT ${SM_COMMON_IE_SRCS})
 
