--- a/examples/xApp/c/slice/CMakeLists.txt
+++ b/examples/xApp/c/slice/CMakeLists.txt
@@ -28,6 +28,9 @@ add_executable(xapp_slice_moni_ctrl
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/guami.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/gummei.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_enb_id.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_gnb_id.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_ng_enb_id.c
+        ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_ng_ran_node_id.c
         ../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/nr_cgi.c
 	../../../../src/lib/e2sm_common_ie/3gpp_derived_ie/eutra_cgi.c
         ../../../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
