--- a/src/lib/e2sm_common_ie/3gpp_derived_ie/CMakeLists.txt
+++ b/src/lib/e2sm_common_ie/3gpp_derived_ie/CMakeLists.txt
@@ -11,7 +11,10 @@ set(3GPP_DERIVED_IE_SRCS
     gummei.c
     global_enb_id.c
     nr_cgi.c
-    eutra_cgi.c)
+    eutra_cgi.c
+    global_gnb_id.c
+    global_ng_enb_id.c
+    global_ng_ran_node_id.c)
 
 add_library(3gpp_derived_ie_obj OBJECT ${3GPP_DERIVED_IE_SRCS})
               
