--- a/test/agent-ric-xapp/CMakeLists.txt
+++ b/test/agent-ric-xapp/CMakeLists.txt
@@ -31,6 +31,9 @@ add_executable(test_ag_ric_xapp
                 ../../src/lib/e2sm_common_ie/3gpp_derived_ie/guami.c
                 ../../src/lib/e2sm_common_ie/3gpp_derived_ie/gummei.c
                 ../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_enb_id.c
+                ../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_gnb_id.c
+                ../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_ng_enb_id.c
+                ../../src/lib/e2sm_common_ie/3gpp_derived_ie/global_ng_ran_node_id.c
                 ../../src/lib/e2sm_common_ie/3gpp_derived_ie/nr_cgi.c
 		            ../../src/lib/e2sm_common_ie/3gpp_derived_ie/eutra_cgi.c
                 ../../src/lib/e2sm_common_ie/sm_common_ie/ue_id.c
