Added KPM v02.03 format 4 & 5 tests; not yet included in ASN.1 (end-to-end test not possible in this KPM version)

--- a/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/CMakeLists.txt
@@ -9,6 +9,7 @@ set(KPM_RIC_INFO_COMMON_SRCS
   matching_cond_frm_3_lst.c
   meas_info_frm_3_lst.c
   meas_info_cond_ue_lst.c
+  matching_cond_frm_4_lst.c
   )
 
 add_library(kpm_ric_info_common_obj OBJECT ${KPM_RIC_INFO_COMMON_SRCS})
