--- a/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
@@ -4,12 +4,15 @@ set(KPM_RIC_INFO_SRCS
   kpm_ric_action_def_frm_1.c
   kpm_ric_action_def_frm_2.c
   kpm_ric_action_def_frm_3.c
+  kpm_ric_action_def_frm_4.c
+  kpm_ric_action_def_frm_5.c
   kpm_ric_event_trigger_def.c
   kpm_ric_ind_hdr.c
   kpm_ric_ind_hdr_frm_1.c
   kpm_ric_ind_msg.c
   kpm_ric_ind_msg_frm_1.c
   kpm_ric_ind_msg_frm_2.c
+  kpm_ric_ind_msg_frm_3.c
   )
 
 
